# real-estate

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  cronjob.yaml  deployment.yaml  pyproject.toml  zillow_scraper.yaml
EDA/: DataAccessGuide.ipynb  EDA.ipynb  modeling.py
ETL/: Dockerfile  cronjob.yaml  scraper.py  sql_upload.py
ETL/airflow/: sqlproxy-deployment.yaml  zscrapedag.py
src/: README.md  scraper.py  sql_upload.py
src/airflow/: sqlproxy-service.yaml
